--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
@@ -6,6 +6,8 @@
     name: "{{ artifactory_daemon }}"
     state: restarted
     daemon_reload: true
+  when:
+    - artifactory_start_service
 
 - name: Stop artifactory
   become: true
