--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -197,6 +197,8 @@
 
 - name: Restart artifactory
   ansible.builtin.meta: flush_handlers
+  when:
+    - artifactory_start_service
 
 - name: Make sure artifactory is up and running
   ansible.builtin.uri:
@@ -207,4 +209,6 @@
   until: result is succeeded
   retries: 25
   delay: 5
-  when: not ansible_check_mode
+  when:
+    - not ansible_check_mode
+    - artifactory_start_service
