--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: Configure main nginx conf file.
   become: true
   ansible.builtin.template:
-    src: nginx.conf.j2
+    src: "{{ nginx_conf_template }}"
     dest: /etc/nginx/nginx.conf
     owner: root
     group: root
@@ -42,7 +42,7 @@
 - name: Configure the artifactory nginx conf
   become: true
   ansible.builtin.template:
-    src: artifactory.conf.j2
+    src: "{{ artifactory_conf_template }}"
     dest: /etc/nginx/conf.d/artifactory.conf
     owner: root
     group: root
