--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat.yml
@@ -25,3 +25,14 @@
   ansible.builtin.yum:
     state: present
     update_cache: true
+
+- name: Gather selinux facts
+  ansible.builtin.setup:
+    gather_subset: selinux
+
+- name: Set httpd_can_network_connect
+  ansible.posix.seboolean:
+    name: httpd_can_network_connect
+    state: true
+    persistent: true
+  when: ansible_facts.selinux.status == 'enabled'
