--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/RedHat.yml
@@ -31,6 +31,7 @@
     gather_subset: selinux
 
 - name: Set httpd_can_network_connect
+  become: true
   ansible.posix.seboolean:
     name: httpd_can_network_connect
     state: true
