--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -47,11 +47,13 @@
     path: /etc/cron.allow
     line: "{{ artifactory_user }}"
     state: present
+  when: artifactory_allow_crontab
 
 - name: Allow reading cron.allow
   file:
     path: /etc/cron.allow
     mode: 0644
+  when: artifactory_allow_crontab
 
 - name: Check if artifactory tar already exists
   become: true
