--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
@@ -22,11 +22,13 @@
     path: /etc/cron.allow
     line: "{{ xray_user }}"
     state: present
+  when: xray_allow_crontab
 
 - name: Allow reading cron.allow
   file:
     path: /etc/cron.allow
     mode: 0644
+  when: xray_allow_crontab
 
 - name: Check if xray tar exists
   become: true
