--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/upgrade.yml
@@ -121,6 +121,19 @@
     group: "{{ xray_group }}"
     recurse: true
 
+- name: Allow using crontab
+  ansible.builtin.lineinfile:
+    path: /etc/cron.allow
+    line: "{{ xray_user }}"
+    state: present
+  when: xray_allow_crontab
+
+- name: Allow reading cron.allow
+  file:
+    path: /etc/cron.allow
+    mode: 0644
+  when: xray_allow_crontab
+
 - name: Restart xray
   ansible.builtin.meta: flush_handlers
 
