Distribution: distribution_allow_crontab var

--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/defaults/main.yml
@@ -70,3 +70,6 @@ distribution_systemyaml: |-
 
 # Note: distribution_systemyaml_override is by default false,  if you want to change default distribution_systemyaml
 distribution_systemyaml_override: false
+
+# Allow distribution user to create crontab rules
+distribution_allow_crontab: false
