--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/defaults/main.yml
@@ -12,6 +12,8 @@ artifactory_docker_registry_subdomain: false
 
 artifactory_conf_template: artifactory.conf.j2
 nginx_conf_template: nginx.conf.j2
-
+ssl_certificate_install: true
 ssl_certificate_path: /etc/pki/tls/certs
+ssl_certificate: cert.pem
 ssl_certificate_key_path: /etc/pki/tls/private
+ssl_certificate_key: cert.key
