--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
@@ -57,6 +57,7 @@
     mode: 0755
 
 - name: Ensure ssl_certificate_path exists
+  when: ssl_certificate_install
   become: true
   ansible.builtin.file:
     path: "{{ ssl_certificate_path }}"
@@ -64,6 +65,7 @@
     mode: 0755
 
 - name: Ensure ssl_certificate_key_path exists
+  when: ssl_certificate_install
   become: true
   ansible.builtin.file:
     path: "{{ ssl_certificate_key_path }}"
@@ -71,19 +73,21 @@
     mode: 0700
 
 - name: Configure certificate
+  when: ssl_certificate_install
   become: true
   ansible.builtin.template:
     src: certificate.pem.j2
-    dest: "{{ ssl_certificate_path }}/cert.pem"
+    dest: "{{ ssl_certificate_path }}/{{ ssl_certificate }}"
     mode: 0644
   notify: Restart nginx
   no_log: true
 
 - name: Configure key
+  when: ssl_certificate_install
   become: true
   ansible.builtin.template:
     src: certificate.key.j2
-    dest: "{{ ssl_certificate_key_path }}/cert.key"
+    dest: "{{ ssl_certificate_key_path }}/{{ ssl_certificate_key }}"
     mode: 0600
   notify: Restart nginx
   no_log: true
